Add target groups and listeners

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -296,79 +296,79 @@ Resources:
           Value: !Ref AWS::StackId
       ValidationMethod: DNS
 
-  # SphinxServerSearchdTargetGroup:
-  #   Type: AWS::ElasticLoadBalancingV2::TargetGroup
-  #   DependsOn: Nlb
-  #   Properties:
-  #     HealthCheckIntervalSeconds: 10
-  #     HealthyThresholdCount: 3
-  #     Port: !Ref kSphinxPort
-  #     Protocol: TCP
-  #     TargetGroupAttributes:
-  #       - Key: deregistration_delay.timeout_seconds
-  #         Value: "30"
-  #     TargetType: ip
-  #     Tags:
-  #       - Key: Project
-  #         Value: AppName # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: Name
-  #         Value: !Sub AppName-${EnvironmentType} # TODO
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     UnhealthyThresholdCount: 3
-  #     VpcId: !Ref VpcId
-  # SphinxServerSearchdNlbListener:
-  #   Type: AWS::ElasticLoadBalancingV2::Listener
-  #   Properties:
-  #     DefaultActions:
-  #       - TargetGroupArn: !Ref SphinxServerSearchdTargetGroup
-  #         Type: forward
-  #     LoadBalancerArn: !Ref Nlb
-  #     Port: !Ref kSphinxPort
-  #     Protocol: TCP
+  SphinxServerSearchdTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn: Nlb
+    Properties:
+      HealthCheckIntervalSeconds: 10
+      HealthyThresholdCount: 3
+      Port: !Ref kSphinxPort
+      Protocol: TCP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: "30"
+      TargetType: ip
+      Tags:
+        - Key: Project
+          Value: AppName # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub AppName-${EnvironmentType} # TODO
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      UnhealthyThresholdCount: 3
+      VpcId: !Ref VpcId
+  SphinxServerSearchdNlbListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - TargetGroupArn: !Ref SphinxServerSearchdTargetGroup
+          Type: forward
+      LoadBalancerArn: !Ref Nlb
+      Port: !Ref kSphinxPort
+      Protocol: TCP
 
-  # SphinxServerWebTargetGroup:
-  #   Type: AWS::ElasticLoadBalancingV2::TargetGroup
-  #   DependsOn: Nlb
-  #   Properties:
-  #     HealthCheckIntervalSeconds: 10
-  #     HealthCheckPort: "3000"
-  #     HealthyThresholdCount: 3
-  #     Port: 80
-  #     Protocol: TCP
-  #     TargetGroupAttributes:
-  #       - Key: deregistration_delay.timeout_seconds
-  #         Value: "30"
-  #     TargetType: ip
-  #     Tags:
-  #       - Key: Project
-  #         Value: Networks # TODO
-  #       - Key: Environment
-  #         Value: !Ref EnvironmentType
-  #       - Key: Name
-  #         Value: !Sub Networks-${EnvironmentType} # TODO
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     UnhealthyThresholdCount: 3
-  #     VpcId: !Ref VpcId
-  # SphinxServerWebNlbListener:
-  #   Type: AWS::ElasticLoadBalancingV2::Listener
-  #   Properties:
-  #     Certificates:
-  #       - CertificateArn: !Ref NlbCertificate
-  #     LoadBalancerArn: !Ref Nlb
-  #     Port: 443
-  #     Protocol: TLS
-  #     SslPolicy: ELBSecurityPolicy-2016-08
-  #     DefaultActions:
-  #       - Type: forward
-  #         TargetGroupArn: !Ref SphinxServerWebTargetGroup
+  SphinxServerWebTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn: Nlb
+    Properties:
+      HealthCheckIntervalSeconds: 10
+      HealthCheckPort: "3000"
+      HealthyThresholdCount: 3
+      Port: 80
+      Protocol: TCP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: "30"
+      TargetType: ip
+      Tags:
+        - Key: Project
+          Value: Networks # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub Networks-${EnvironmentType} # TODO
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      UnhealthyThresholdCount: 3
+      VpcId: !Ref VpcId
+  SphinxServerWebNlbListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      Certificates:
+        - CertificateArn: !Ref NlbCertificate
+      LoadBalancerArn: !Ref Nlb
+      Port: 443
+      Protocol: TLS
+      SslPolicy: ELBSecurityPolicy-2016-08
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref SphinxServerWebTargetGroup
 
   SphinxServerInboundSecurityGroup:
     Type: AWS::EC2::SecurityGroup
