--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -164,9 +164,11 @@ Resources:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
       Parameters:
+        EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
-        PublicRouteTableId: !GetAtt PublicSubnetsStack.Outputs.RouteTableId
-        # PrivateRouteTableId: !GetAtt PrivateSubnetsStack.Outputs.RouteTableId
+        PrivateSubnet1Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
+        PrivateSubnet2Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
+        PrivateSubnet3Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet32Id
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
