Enable Sphinx service

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -29,6 +29,7 @@ Parameters:
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   EchoServiceToken: { Type: String }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
+  EcsLaunchEndpointsAccessSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
   PublishEcrImageTag: { Type: String }
   PublishSecretsVersion: { Type: String }
@@ -375,6 +376,7 @@ Resources:
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
         EchoServiceToken: !Ref EchoServiceToken
+        EcsLaunchEndpointsAccessSecurityGroupId: !Ref EcsLaunchEndpointsAccessSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
