--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1000,6 +1000,7 @@ Resources:
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         EcsAsgOutboundTrafficSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.OutboundTrafficSecurityGroupId
         EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
