--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -265,3 +265,9 @@ Outputs:
   PrivateSubnet3Az:
     Description: AZ of private subnet 1
     Value: !GetAtt PrivateSubnetsStack.Outputs.Subnet3AZ
+
+  EcsLaunchEndpointsAccessSecurityGroupId:
+    Description: >-
+      The ID of a security group that has VPC Endpoint access to AWS services
+      required to launch tasks in ECS.
+    Value: !GetAtt InterfaceEndpointsStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
