Add outbound HTTPS NACL rule

--- a/stacks/shared-vpc/private-network-acl.yml
+++ b/stacks/shared-vpc/private-network-acl.yml
@@ -110,6 +110,34 @@ Resources:
       RuleAction: allow
       RuleNumber: 121
 
+  # EGRESS 130
+  # Allows outbound HTTPS web requests originating from hosts within the VPC
+  # to all IPs
+  OutboundIpV4HttpsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      CidrBlock: 0.0.0.0/0
+      Egress: true
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 130
+  OutboundIpV6HttpsNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      Egress: true
+      Ipv6CidrBlock: ::/0
+      NetworkAclId: !Ref PrivateNetworkAcl
+      PortRange:
+        From: 443
+        To: 443
+      Protocol: 6 # TCP
+      RuleAction: allow
+      RuleNumber: 131
+
 Outputs:
   NetworkAclName:
     Description: The resource name of the private network ACL
