--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -875,6 +875,7 @@ Resources:
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
         EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
         AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
