--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -166,6 +166,9 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
+        PublicSubnet1Id: !GetAtt PublicSubnetsStack.Outputs.Subnet1Id
+        PublicSubnet2Id: !GetAtt PublicSubnetsStack.Outputs.Subnet2Id
+        PublicSubnet3Id: !GetAtt PublicSubnetsStack.Outputs.Subnet3Id
         PrivateSubnet1Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet1Id
         PrivateSubnet2Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet2Id
         PrivateSubnet3Id: !GetAtt PrivateSubnetsStack.Outputs.Subnet3Id
