--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -796,120 +796,120 @@ Resources:
       TemplateURL: !Join ["", ["https://", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureSourceBucket", !Sub ".s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}", "/stacks/shared-memcached.yml"]]
       TimeoutInMinutes: 40
 
-  SharedVpcStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - !GetAtt Constants.CloudFormationNotificationArn
-      Parameters:
-        AwsOrganizationId: !Ref AwsOrganizationId
-        AvailabilityZoneSelectorServiceToken: !GetAtt CustomResourcesStack.Outputs.AvailabilityZoneSelectorServiceToken
-        EnvironmentType: !Ref EnvironmentType
-        TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-vpc
-        CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-vpc.yml
-      TimeoutInMinutes: 5
+  # SharedVpcStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt Constants.CloudFormationNotificationArn
+  #     Parameters:
+  #       AwsOrganizationId: !Ref AwsOrganizationId
+  #       AvailabilityZoneSelectorServiceToken: !GetAtt CustomResourcesStack.Outputs.AvailabilityZoneSelectorServiceToken
+  #       EnvironmentType: !Ref EnvironmentType
+  #       TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-vpc
+  #       CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-vpc.yml
+  #     TimeoutInMinutes: 5
 
-  SharedAlbStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - !GetAtt Constants.CloudFormationNotificationArn
-      Parameters:
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
-        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
-        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
-        NotificationsStackName: !Ref NotificationsStackName
-        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-alb.yml
-      TimeoutInMinutes: 5
-  SharedEcsClusterStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - !GetAtt Constants.CloudFormationNotificationArn
-      Parameters:
-        EnvironmentType: !Ref EnvironmentType
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-cluster.yml
-      TimeoutInMinutes: 5
-  SharedEcsAsgStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - !GetAtt Constants.CloudFormationNotificationArn
-      Parameters:
-        EnvironmentType: !Ref EnvironmentType
-        # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
-        KeyPairName: !Ref AsgKeyPairName
-        VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
-        VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
-        VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
-        VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
-        EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
-        AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
-        EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-asg.yml
-      TimeoutInMinutes: 5
+  # SharedAlbStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt Constants.CloudFormationNotificationArn
+  #     Parameters:
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+  #       VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+  #       VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+  #       VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+  #       VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+  #       NotificationsStackName: !Ref NotificationsStackName
+  #       EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-alb.yml
+  #     TimeoutInMinutes: 5
+  # SharedEcsClusterStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt Constants.CloudFormationNotificationArn
+  #     Parameters:
+  #       EnvironmentType: !Ref EnvironmentType
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-cluster.yml
+  #     TimeoutInMinutes: 5
+  # SharedEcsAsgStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - !GetAtt Constants.CloudFormationNotificationArn
+  #     Parameters:
+  #       EnvironmentType: !Ref EnvironmentType
+  #       # EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
+  #       KeyPairName: !Ref AsgKeyPairName
+  #       VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+  #       VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+  #       VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+  #       VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+  #       EcsClusterName: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterName
+  #       AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+  #       EcsLaunchEndpointsAccessSecurityGroupId: !GetAtt SharedVpcStack.Outputs.EcsLaunchEndpointsAccessSecurityGroupId
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-asg.yml
+  #     TimeoutInMinutes: 5
 
-  PrivateSharedMemcachedStack:
-    Type: AWS::CloudFormation::Stack
-    Condition: IsStaging
-    Properties:
-      NotificationARNs:
-        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
-      Parameters:
-        VPC: !GetAtt SharedVpcStack.Outputs.VpcId
-        VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-        VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-        VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-        OpsWarnMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
-        OpsErrorMessagesSnsTopicArn:
-          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
-        EnvironmentType: !Ref EnvironmentType
-        SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
-      Tags:
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
-      TimeoutInMinutes: 40
+  # PrivateSharedMemcachedStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Condition: IsStaging
+  #   Properties:
+  #     NotificationARNs:
+  #       - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+  #     Parameters:
+  #       VPC: !GetAtt SharedVpcStack.Outputs.VpcId
+  #       VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+  #       VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+  #       VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+  #       OpsWarnMessagesSnsTopicArn:
+  #         Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+  #       OpsErrorMessagesSnsTopicArn:
+  #         Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+  #       EnvironmentType: !Ref EnvironmentType
+  #       SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+  #     Tags:
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
+  #     TimeoutInMinutes: 40
 
   # ProvisionedStack:
   #   Type: AWS::CloudFormation::Stack
@@ -1024,12 +1024,12 @@ Outputs:
       The dualstack DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
 
-  SharedAlbVanityDomain:
-    Condition: IsStaging # TODO
-    Description: >-
-      The wildcard domain associated with the shared application load balancer
-    Value: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
-  SharedVpcId:
-    Condition: IsStaging # TODO
-    Description: The resource ID for the shared VPC
-    Value: !GetAtt SharedVpcStack.Outputs.VpcId
+  # SharedAlbVanityDomain:
+  #   Condition: IsStaging # TODO
+  #   Description: >-
+  #     The wildcard domain associated with the shared application load balancer
+  #   Value: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
+  # SharedVpcId:
+  #   Condition: IsStaging # TODO
+  #   Description: The resource ID for the shared VPC
+  #   Value: !GetAtt SharedVpcStack.Outputs.VpcId
