Retain VPC and CIDR blocks

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -22,7 +22,8 @@ Conditions:
 Resources:
   Vpc:
     Type: AWS::EC2::VPC
-    # TODO Deletion and UpdateReplace policies
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       # TODO Needs to be more dynamic or a parameter
       CidrBlock: !If
@@ -45,6 +46,8 @@ Resources:
           Value: !Ref AWS::StackId
   IPv6VpcCidrBlock:
     Type: AWS::EC2::VPCCidrBlock
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       AmazonProvidedIpv6CidrBlock: true
       VpcId: !Ref Vpc
