Add missing DependsOn

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -95,6 +95,7 @@ Resources:
       TimeoutInMinutes: 5
   PrivateNetworkAclStack:
     Type: AWS::CloudFormation::Stack
+    DependsOn: IPv6VpcCidrBlock
     Properties:
       NotificationARNs:
         - !Ref CloudFormationNotificationArn
