--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -6,6 +6,7 @@ Description: >- # TODO
 
 Parameters:
   EnvironmentType: { Type: String }
+  EnvironmentTypeAbbreviation: { Type: String }
   KeyPairName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: >-
@@ -276,9 +277,9 @@ Resources:
       MinSize: !If
         - IsProduction
         - "4"
-        - "2"
+        - "0"
       NewInstancesProtectedFromScaleIn: true
-      # NotificationConfigurations
+      # TODO NotificationConfigurations
       Tags:
         - Key: Project
           Value: platform.prx.org # TODO
@@ -287,7 +288,7 @@ Resources:
           Value: !Ref EnvironmentType
           PropagateAtLaunch: true
         - Key: Name
-          Value: tktktk # TODO
+          Value: !Sub ECS ASG ${EnvironmentTypeAbbreviation} # TODO  This will be the name of launched EC2 instances
           PropagateAtLaunch: true
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -313,7 +314,7 @@ Resources:
           TargetCapacity: !If
             - IsProduction
             - 72
-            - 95
+            - 100
         ManagedTerminationProtection: ENABLED
       Tags:
         - Key: Project
