--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -38,7 +38,7 @@ Resources:
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
-          Value: !Sub ${AWS::StackName}-VPC # TODO Needs a better name
+          Value: !Sub Shared-${AWS::StackName}-VPC # TODO Needs a better name
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
