Remove extra newline

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -238,7 +238,7 @@ Resources:
           commands:
             01_configure_ecs_container_agent:
               # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-agent-config.html
-              command: !Sub |
+              command: !Sub |-
                 #!/bin/bash
                 echo "Configuring ECS container agent"
                 echo "Launching instance into cluster: ${EcsClusterName}"
