Enable new shared memcached stack

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -885,30 +885,30 @@ Resources:
       TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-asg.yml
       TimeoutInMinutes: 20
 
-  # PrivateSharedMemcachedStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   Condition: IsStaging
-  #   Properties:
-  #     NotificationARNs:
-  #       - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
-  #     Parameters:
-  #       VPC: !GetAtt SharedVpcStack.Outputs.VpcId
-  #       VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
-  #       VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
-  #       VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-  #       OpsWarnMessagesSnsTopicArn:
-  #         Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
-  #       OpsErrorMessagesSnsTopicArn:
-  #         Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
-  #       EnvironmentType: !Ref EnvironmentType
-  #       SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
-  #     Tags:
-  #       - Key: prx:cloudformation:stack-name
-  #         Value: !Ref AWS::StackName
-  #       - Key: prx:cloudformation:stack-id
-  #         Value: !Ref AWS::StackId
-  #     TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
-  #     TimeoutInMinutes: 40
+  PrivateSharedMemcachedStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        VPC: !GetAtt SharedVpcStack.Outputs.VpcId
+        VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        EnvironmentType: !Ref EnvironmentType
+        SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
+      TimeoutInMinutes: 40
 
   # ProvisionedStack:
   #   Type: AWS::CloudFormation::Stack
