Add default value

--- a/devops/cross-account-vpc-peering-requester.yml
+++ b/devops/cross-account-vpc-peering-requester.yml
@@ -93,6 +93,7 @@ Parameters:
       same region, leave blank.
   PeerRoleArn:
     Type: String
+    Default: arn:aws:iam::000000000000:role/DevOps-VpcPeeringAccepterRole
     Description: >-
       (Optional) The ARN for a IAM role in the accepter VPC's account that has
       permission to accept VPC peering connections, and has a trust
