--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -1023,12 +1023,12 @@ Outputs:
       The dualstack DNS name for the platform application load balancer
     Value: !GetAtt LoadBalancersStack.Outputs.PlatformALBDualstackDNSName
 
-  # SharedAlbVanityDomain:
-  #   Condition: IsStaging # TODO
-  #   Description: >-
-  #     The wildcard domain associated with the shared application load balancer
-  #   Value: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
-  # SharedVpcId:
-  #   Condition: IsStaging # TODO
-  #   Description: The resource ID for the shared VPC
-  #   Value: !GetAtt SharedVpcStack.Outputs.VpcId
+  SharedAlbVanityDomain:
+    Condition: IsStaging # TODO
+    Description: >-
+      The wildcard domain associated with the shared application load balancer
+    Value: !GetAtt SharedAlbStack.Outputs.VanityAlbDomain
+  SharedVpcId:
+    Condition: IsStaging # TODO
+    Description: The resource ID for the shared VPC
+    Value: !GetAtt SharedVpcStack.Outputs.VpcId
